plogapp/tests/errors/WrongSortExprInAttlDecl2.plog
sorts
#s = {a}.
#s2 = f(#s).
attributes
a: #s3 -> #s2.
statements

